syntax = "proto3";

package pb.product;

option go_package = "github.com/MamangRust/simple_microservice_ecommerce_pb/product";

import "google/protobuf/empty.proto";
import "product/common.proto";

message CreateProductRequest {
  string name = 1;
  int64 price = 2;
  int32 stock = 3;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  int64 price = 3;
  int32 stock = 4;
}

message UpdateProductStockRequest {
  int32 id = 1;
  int32 stock = 2;
}

message ApiResponseProductDelete {
  string status = 1;
  string message = 2;
}

message ApiResponseProductAll {
  string status = 1;
  string message = 2;
}

service ProductCommandService {
  rpc Create(CreateProductRequest) returns (pb.product.ApiResponseProduct);
  rpc Update(UpdateProductRequest) returns (pb.product.ApiResponseProduct);
  rpc UpdateProductCountStock(UpdateProductStockRequest)
      returns (pb.product.ApiResponseProduct);

  rpc Trashed(pb.product.FindByIdProductRequest)
      returns (pb.product.ApiResponseProductDeleteAt);
  rpc Restore(pb.product.FindByIdProductRequest)
      returns (pb.product.ApiResponseProductDeleteAt);
  rpc DeleteProductPermanent(pb.product.FindByIdProductRequest)
      returns (pb.product.ApiResponseProductDelete);

  rpc RestoreAllProduct(google.protobuf.Empty) returns (ApiResponseProductAll);
  rpc DeleteAllProduct(google.protobuf.Empty) returns (ApiResponseProductAll);
}
